--- a/.github/workflows/deploy-on-aws.yml
+++ b/.github/workflows/deploy-on-aws.yml
@@ -4,9 +4,9 @@ name: Deploy to AWS ECR
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
     
 jobs:
 
@@ -31,7 +31,7 @@ jobs:
           - name: Build, tag, and push image to Amazon ECR
             env:
               ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-              ECR_REPOSITORY: react-docker-demo
+              ECR_REPOSITORY: hello-world-django
               IMAGE_TAG: 1
             run: |
               # Build a docker container and push it to ECR 
