--- a/.github/workflows/deploy-on-aws.yml
+++ b/.github/workflows/deploy-on-aws.yml
@@ -35,7 +35,7 @@ jobs:
               IMAGE_TAG: 1
             run: |
               # Build a docker container and push it to ECR 
-              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile.aws .
               echo "Pushing image to ECR..."
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
