--- a/deploy-on-aws.yaml
+++ b/deploy-on-aws.yaml
@@ -31,5 +31,7 @@ jobs:
               # Build a docker container and push it to ECR 
               docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f .
               echo "Pushing image to ECR..."
+              echo $ECR_REGISTRY
+              echo "taco"
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
