--- a/.github/workflows/deploy-on-aws.yml
+++ b/.github/workflows/deploy-on-aws.yml
@@ -37,5 +37,7 @@ jobs:
               # Build a docker container and push it to ECR 
               docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile.aws .
               echo "Pushing image to ECR..."
+              echo $ECR_REGISTRY
+              echo "testing"
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
